--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 82c73cff-ade4-41a5-a33c-c6f6a7f6f533, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
-  - {name: 🇺🇸 美国-1007.9KB/s(Youtube:不良林), server: 38.143.66.20, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇫🇷 法国-249.1KB/s(Youtube:不良林), server: 51.38.118.42, port: 819, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇯🇵 日本-2.97MB/s(Youtube:不良林), server: 20.89.67.251, port: 80, type: vmess, uuid: 1257774c-2bad-4eaa-8369-456a4571982c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.89.67.251}}
-  - {name: 🇮🇳 印度-425.2KB/s(Youtube:不良林), server: 140.238.255.240, port: 443, type: vmess, uuid: aaf9f463-876e-4bfd-ed11-1c07ad830092, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 140.238.255.240}}
+  - {name: 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
+  - {name: 🇫🇷 法国-1.17MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-580.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 捷克-405.9KB/s(Youtube:不良林), server: 194.87.99.227, port: 32364, type: vmess, uuid: abd6dc4b-b598-47b8-d392-afba4ec57ff1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 194.87.99.227}}
+  - {name: 🇺🇸 美国-4.16MB/s(Youtube:不良林), server: 20.214.180.60, port: 45364, type: vmess, uuid: e05375d9-4f6b-47d8-85a0-87b29f891838, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /kj65152, ws-headers: {Host: 20.214.180.60}}
   - {name: 阿联酋-1.06MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
   - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 138.2.71.189, port: 11188, type: vmess, uuid: 923f14b3-9131-46a9-ef9b-863e8d026078, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 138.2.71.189}}
   - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: 98.126.18.91, port: 50687, type: vmess, uuid: 2d20b0bd-eaaa-45bb-d69d-986a4076832c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-249.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.97MB/s(Youtube:不良林)
-      - 🇮🇳 印度-425.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-580.8KB/s(Youtube:不良林)
+      - 捷克-405.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 阿联酋-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-249.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.97MB/s(Youtube:不良林)
-      - 🇮🇳 印度-425.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-580.8KB/s(Youtube:不良林)
+      - 捷克-405.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 阿联酋-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-249.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.97MB/s(Youtube:不良林)
-      - 🇮🇳 印度-425.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-580.8KB/s(Youtube:不良林)
+      - 捷克-405.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 阿联酋-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-249.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.97MB/s(Youtube:不良林)
-      - 🇮🇳 印度-425.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-580.8KB/s(Youtube:不良林)
+      - 捷克-405.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 阿联酋-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-249.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.97MB/s(Youtube:不良林)
-      - 🇮🇳 印度-425.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-580.8KB/s(Youtube:不良林)
+      - 捷克-405.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 阿联酋-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-249.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.97MB/s(Youtube:不良林)
-      - 🇮🇳 印度-425.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-580.8KB/s(Youtube:不良林)
+      - 捷克-405.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 阿联酋-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-1.21MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1007.9KB/s(Youtube:不良林)
-      - 🇫🇷 法国-249.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.97MB/s(Youtube:不良林)
-      - 🇮🇳 印度-425.2KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-580.8KB/s(Youtube:不良林)
+      - 捷克-405.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
       - 阿联酋-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
