--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林), server: 45.8.230.253, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 45.8.230.253}}
-  - {name: 🇫🇷 法国-1.17MB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-580.8KB/s(Youtube:不良林), server: 38.143.66.20, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 捷克-405.9KB/s(Youtube:不良林), server: 194.87.99.227, port: 32364, type: vmess, uuid: abd6dc4b-b598-47b8-d392-afba4ec57ff1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 194.87.99.227}}
+  - {name: 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林), server: 176.119.156.229, port: 852, type: vmess, uuid: 35b021ff-cf42-4b32-aeb7-4f634363df40, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: 176.119.156.229}}
+  - {name: 🇫🇷 法国-450.9KB/s(Youtube:不良林), server: 51.38.118.42, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇺🇸 美国-4.16MB/s(Youtube:不良林), server: 20.214.180.60, port: 45364, type: vmess, uuid: e05375d9-4f6b-47d8-85a0-87b29f891838, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /kj65152, ws-headers: {Host: 20.214.180.60}}
+  - {name: 🇺🇸 美国-5.76MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
+  - {name: 🇨🇦 加拿大-229.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 阿联酋-1.06MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
   - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 138.2.71.189, port: 11188, type: vmess, uuid: 923f14b3-9131-46a9-ef9b-863e8d026078, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 138.2.71.189}}
   - {name: 🇺🇸 美国-1.67MB/s(Youtube:不良林), server: 98.126.18.91, port: 50687, type: vmess, uuid: 2d20b0bd-eaaa-45bb-d69d-986a4076832c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 未知国家-2.39MB/s(Youtube:不良林), server: xiexi.tk, port: 2096, type: vmess, uuid: 37551ca0-8cc3-432f-ca1f-82aba1db3ef9, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: xiexi.tk}}
+  - {name: 🇺🇸 美国-2.39MB/s(Youtube:不良林), server: xiexi.tk, port: 2096, type: vmess, uuid: 37551ca0-8cc3-432f-ca1f-82aba1db3ef9, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: xiexi.tk}}
   - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 64.112.43.180, port: 13674, type: vmess, uuid: f44ce146-2d6d-4e84-dcac-3bdd8689d053, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-580.8KB/s(Youtube:不良林)
-      - 捷克-405.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-450.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-229.8KB/s(Youtube:不良林)
       - 阿联酋-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-580.8KB/s(Youtube:不良林)
-      - 捷克-405.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-450.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-229.8KB/s(Youtube:不良林)
       - 阿联酋-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-580.8KB/s(Youtube:不良林)
-      - 捷克-405.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-450.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-229.8KB/s(Youtube:不良林)
       - 阿联酋-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-580.8KB/s(Youtube:不良林)
-      - 捷克-405.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-450.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-229.8KB/s(Youtube:不良林)
       - 阿联酋-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-580.8KB/s(Youtube:不良林)
-      - 捷克-405.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-450.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-229.8KB/s(Youtube:不良林)
       - 阿联酋-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-580.8KB/s(Youtube:不良林)
-      - 捷克-405.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-450.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-229.8KB/s(Youtube:不良林)
       - 阿联酋-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-710.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-1.17MB/s(Youtube:不良林)
-      - 🇺🇸 美国-580.8KB/s(Youtube:不良林)
-      - 捷克-405.9KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-1.12MB/s(Youtube:不良林)
+      - 🇫🇷 法国-450.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.16MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.76MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-229.8KB/s(Youtube:不良林)
       - 阿联酋-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.67MB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.39MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
