--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-4.08MB/s(Youtube:不良林), server: 103.5.54.177, port: 54723, type: vmess, uuid: 1031729b-4fd5-495c-f21f-94c94ffd3afc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.5.54.177}}
-  - {name: 🇩🇪 德国-6.06MB/s(Youtube:不良林), server: 147.78.247.12, port: 11188, type: vmess, uuid: 1dda6ae1-d179-405a-8542-0a1fb8328b0e, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 147.78.247.12}}
-  - {name: 🇺🇸 美国-914.5KB/s(Youtube:不良林), server: 38.143.66.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-1.13MB/s(Youtube:不良林), server: 38.143.66.20, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-2.01MB/s(Youtube:不良林), server: 23.224.152.24, port: 25609, type: vmess, uuid: c9939714-04d7-45f9-dd33-30ec6057239b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 阿联酋-1.06MB/s(Youtube:不良林), server: 193.123.67.0, port: 11188, type: vmess, uuid: 280683d0-369c-42e9-be4b-e723a73b7785, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 193.123.67.0}}
-  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: 138.2.71.189, port: 11188, type: vmess, uuid: 923f14b3-9131-46a9-ef9b-863e8d026078, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 138.2.71.189}}
-  - {name: 🇺🇸 美国-480.7KB/s(Youtube:不良林), server: 98.126.18.91, port: 50687, type: vmess, uuid: 2d20b0bd-eaaa-45bb-d69d-986a4076832c, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 未知国家-2.39MB/s(Youtube:不良林), server: xiexi.tk, port: 2096, type: vmess, uuid: 37551ca0-8cc3-432f-ca1f-82aba1db3ef9, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: xiexi.tk}}
-  - {name: 🇺🇸 美国-1.74MB/s(Youtube:不良林), server: 64.112.43.180, port: 13674, type: vmess, uuid: f44ce146-2d6d-4e84-dcac-3bdd8689d053, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1009.7KB/s(Youtube:不良林), server: node-jp-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-jp-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.09MB/s(Youtube:不良林), server: 140.238.42.147, port: 11188, type: vmess, uuid: 798550eb-c374-4113-b0d5-530e7d4ddedc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 140.238.42.147}}
+  - {name: 🇨🇦 加拿大-515.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-594.2KB/s(Youtube:不良林), server: 38.143.66.20, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇫🇷 法国-881.2KB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇨🇳 中国-459.6KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-210.3KB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-236.2KB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-338.3KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-706.3KB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-914.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 阿联酋-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.7KB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1009.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-515.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-594.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-881.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-210.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-236.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-914.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 阿联酋-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.7KB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1009.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-515.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-594.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-881.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-210.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-236.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-914.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 阿联酋-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.7KB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1009.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-515.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-594.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-881.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-210.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-236.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-914.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 阿联酋-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.7KB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1009.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-515.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-594.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-881.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-210.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-236.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-914.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 阿联酋-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.7KB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1009.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-515.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-594.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-881.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-210.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-236.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-914.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 阿联酋-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.7KB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1009.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-515.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-594.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-881.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-210.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-236.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-4.08MB/s(Youtube:不良林)
-      - 🇩🇪 德国-6.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-914.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.01MB/s(Youtube:不良林)
-      - 阿联酋-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
-      - 🇺🇸 美国-480.7KB/s(Youtube:不良林)
-      - 未知国家-2.39MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.74MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1009.7KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.09MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-515.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-594.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-881.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-459.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-210.3KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-236.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-338.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-706.3KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
